tests/toylang/neg/001700_mutation.toylang
program a = { while var a do sleep; } .
